--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -12,5 +12,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: echo "${{ TEST_KEY }}">s.txt
+    - run: echo "${{ secrets.TEST_KEY }}">s.txt
     - run: cat s.txt 
