--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -17,6 +17,8 @@ jobs:
           node-version: '20'
       - name: Checkout Repo.
         uses: actions/checkout@v4
+      - name: Install Vite.
+        run: npm install vite@latest
       - name: exec build command.
         run: npm run build
       - name: Set-up ssh dir.
