--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -11,19 +11,53 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Get Github action IP
+        id: ip
+        uses: haythem/public-ip@v1.2
+  
+      - name: Setting environment variables..
+        run: |
+          echo "AWS_DEFAULT_REGION=ap-southeast-1" &gt;&gt; $GITHUB_ENV
+          echo "AWS_SG_NAME=default" &gt;&gt; $GITHUB_ENV
+          
+      - name: Add Github Actions IP to Security group
+        run: |
+          aws ec2 authorize-security-group-ingress --group-name ${{ env.AWS_SG_NAME }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32    
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
+         
       - name: Setup-node
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+
       - name: Checkout Repo.
         uses: actions/checkout@v4
+
       - name: Install Vite.
         run: npm install vite@latest
+
       - name: exec build command.
         run: npm run build
+
       - name: Set-up ssh dir.
         run: mkdir ~/.ssh
+
       - name: Set-up ssh-key file.
         run: echo "${{ secrets.SSH_KEY }}">~/.ssh/.pem
+
       - name: exec scp command.
         run: scp -i "~/.ssh/.pem" -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
+
+      - name: Remove Github Actions IP from security group
+        run: |
+          aws ec2 revoke-security-group-ingress --group-name ${{ env.AWS_SG_NAME }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
+        if: always()
+      
+      
