--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -17,8 +17,8 @@ jobs:
   
       - name: Setting environment variables..
         run: |
-          echo "AWS_DEFAULT_REGION=ap-southeast-1" &gt;&gt; $GITHUB_ENV
-          echo "AWS_SG_NAME=default" &gt;&gt; $GITHUB_ENV
+          echo "AWS_DEFAULT_REGION=ap-northeast-1" &gt;&gt; $GITHUB_ENV
+          echo "AWS_SG_NAME=${{secrets.AWS_SECURITY_GROUP_NAME}}" &gt;&gt; $GITHUB_ENV
           
       - name: Add Github Actions IP to Security group
         run: |
