--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -43,11 +43,11 @@ jobs:
       - name: Set-up ssh config-file
         run: echo "Host ${{secrets.DEPLOY_HOST}}">config;echo "  StrictHostKeyChecking no">config;echo "  UserKnownHostsFile /dev/null">config
 
-      - name: Set-up ssh-key file.
-        run: echo "${{ secrets.SSH_KEY }}">~/.ssh/.pem
+      # - name: Set-up ssh-key file.
+      #   run: echo "${{ secrets.SSH_KEY }}">~/.ssh/.pem
 
       - name: exec scp command.
-        run: scp -i "~/.ssh/.pem" -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
+        run: scp -i "${{ secrets.SSH_KEY }}" -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
 
       - name: Remove Github Actions IP from security group
         run: |
