--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -66,7 +66,7 @@ jobs:
         run: echo "${{ secrets.SSH_KEY }}">~/.ssh/aws.pem
 
       - name: exec scp command.
-        run: scp -i "~/.ssh/aws.pem" -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
+        run: scp -o -i "~/.ssh/aws.pem" -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
 
       - name: Remove Github Actions IP from security group
         run: |
