--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -59,14 +59,17 @@ jobs:
       - name: Set-up ssh dir.
         run: mkdir ~/.ssh
 
+      - name: Set-up known_hosts file.
+        run: echo "${{secrets.DEPLOY_HOST}} ssh-rsa ${{secrets.SSH_KEY}}">~/.ssh/known_hosts
+
       - name: Set-up ssh config-file
         run: echo "Host ${{secrets.DEPLOY_HOST}}">config;echo "  StrictHostKeyChecking no">config;echo "  UserKnownHostsFile /dev/null">config
 
-      - name: Set-up ssh-key file.
-        run: echo "${{ secrets.SSH_KEY }}">~/.ssh/aws.pem
+      # - name: Set-up ssh-key file.
+      #   run: echo "${{ secrets.SSH_KEY }}">~/.ssh/aws.pem
 
       - name: exec scp command.
-        run: scp -o -i "~/.ssh/aws.pem" -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
+        run: scp -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
 
       - name: Remove Github Actions IP from security group
         run: |
