--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -62,12 +62,7 @@ jobs:
             #   run: echo "${{secrets.DEPLOY_HOST}} ssh-rsa ${{secrets.SSH_KEY}}">~/.ssh/known_hosts
 
             - name: Set-up ssh config-file
-              run: >
-                  echo "Host aws">~/.ssh/config;
-                  echo "  HostName ${{secrets.DEPLOY_HOST}}">~/.ssh/config;
-                  echo "  User ${{secrets.SSH_USER}}">~/.ssh/config;
-                  echo "  IdentityFile ~/.ssh/aws.pem">~/.ssh/config;
-                  echo "  StrictHostKeyChecking no">~/.ssh/config;
+              run: echo -e "Host aws\  HostName ${{secrets.DEPLOY_HOST}}  User ${{secrets.SSH_USER}}  IdentityFile ~/.ssh/aws.pem  StrictHostKeyChecking no">~/.ssh/config
 
             - name: Show ssh config-file
               run: cat ~/.ssh/config
