(from VSCode tasks command[merge-and-push(main)].)

--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -76,9 +76,12 @@ jobs:
             - name: Permission fix pem-file
               run: chmod 600 ~/.ssh/aws.pem
 
+            - name: ls
+              run: ls
+
             - name: exec scp command.
               # run: scp -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
-              run: scp -r "./dist/*" aws:${{secrets.DEPLOY_DIR}}
+              run: scp -r "dist/*" aws:${{secrets.DEPLOY_DIR}}
 
             - name: Remove Github Actions IP from security group
               run: |
