--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -39,8 +39,8 @@ jobs:
             # - name: tes-1
             #   run: ls -la dist
 
-            # - name: permission fix.
-            #   run: chmod -R 0777 dist
+            - name: permission fix.
+              run: chmod -R u+x dist
 
             # - name: tes-2
             #   run: ls -la dist
@@ -81,7 +81,7 @@ jobs:
 
             - name: exec scp command.
               # run: scp -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
-              run: scp dist/* aws:${{secrets.DEPLOY_DIR}}
+              run: scp -r dist/* aws:${{secrets.DEPLOY_DIR}}
 
             - name: Remove Github Actions IP from security group
               run: |
