--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -36,14 +36,14 @@ jobs:
             - name: exec build command.
               run: npm run build
 
-            # - name: tes-1
-            #   run: ls -la dist
+            - name: tes-1
+              run: ls -la dist
 
             - name: permission fix.
-              run: chmod -R u+x dist
+              run: chmod -R 0777 dist
 
-            # - name: tes-2
-            #   run: ls -la dist
+            - name: tes-2
+              run: ls -la dist
 
             # - name: SCP Deploy
             #   uses: lBeJIuk/scp_action@v1
