--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -82,9 +82,16 @@ jobs:
             # - name: ls
             #   run: ls
 
+            - name: b
+              run: echo "aa">b.txt
+
             - name: exec scp command.
-              # run: scp -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
-              run: scp -r dist/* aws:${{secrets.DEPLOY_DIR}}
+              run: scp b.txt aws:~/
+              # run: scp -r dist/* aws:${{secrets.DEPLOY_DIR}}
+
+            # - name: exec scp command.
+            #   # run: scp -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
+            #   run: scp -r dist/* aws:${{secrets.DEPLOY_DIR}}
 
             - name: Remove Github Actions IP from security group
               run: |
