--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -36,14 +36,14 @@ jobs:
             - name: exec build command.
               run: npm run build
 
-            - name: tes-1
-              run: ls -la dist
+            # - name: tes-1
+            #   run: ls -la dist
 
-            - name: permission fix.
-              run: chmod -R 0777 dist
+            # - name: permission fix.
+            #   run: chmod -R 0777 dist
 
-            - name: tes-2
-              run: ls -la dist
+            # - name: tes-2
+            #   run: ls -la dist
 
             # - name: SCP Deploy
             #   uses: lBeJIuk/scp_action@v1
@@ -82,12 +82,12 @@ jobs:
             # - name: ls
             #   run: ls
 
-            - name: b
-              run: echo "aa">b.txt
+            # - name: b
+            #   run: echo "aa">b.txt
 
             - name: exec scp command.
-              run: scp b.txt aws:~/
-              # run: scp -r dist/* aws:${{secrets.DEPLOY_DIR}}
+              #   run: scp b.txt aws:~/
+              run: scp -r dist/* aws:${{secrets.DEPLOY_DIR}}
 
             # - name: exec scp command.
             #   # run: scp -r "./dist/*" ${{secrets.SSH_USER}}@${{secrets.DEPLOY_HOST}}:${{secrets.DEPLOY_DIR}}
